fixed issues with the eventListeners overlap

--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,6 @@
     background-color: #FFF8F3;
 }
 
-/* .col:hover {
-    cursor:pointer;
-} */
-
 #footer {
     border: 2px solid #2F3645;
     width: 100%;
